# questmaster

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  objects.inv  openapi.yml  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  server.js  sitemap.xml  sonar-project.properties  vite.config.js
.github/workflows/: ci.yml  docs.yml
admin/: index.html
api/: Dockerfile  __init__.py  app.js  package-lock.json  package.json
api/controllers/: health.js
api/models/: game.js  game.py  index.js  user.js  user.py
api/reference/: index.html
api/routes/: auth.py  games.py  health.js  health.py  index.js  users.py
api/tests/: api.spec.js  models.spec.js  utils.spec.js
api/utils/: date.js  discord.py  exceptions.py
api/views/: auth.py  health.py
architecture/cli/: index.html
architecture/client/: index.html
architecture/exceptions/: index.html
architecture/models/: index.html
architecture/repositories/: index.html
architecture/services/: index.html
architecture/utils/: index.html
assets/css/: main.css
assets/js/: calendar.js  intro-init.js  intro-manager.js  main.js
config/: constants.py  settings.py
contributing/: index.html
docs/: admin.md  contributing.md  getting-started.md  index.md
docs/api/: openapi.yml  reference.md
docs/architecture/: cli.md  client.md  exceptions.md  models.md  repositories.md  services.md  utils.md
getting-started/: index.html
migrations/versions/: 1ea698e20845_initial_migration.py  2ec87b2c0974_add_user_name.py  3a278ccd9bda_add_special_events_for_games.py  a1b2c3d4e5f6_add_not_player_as_of_to_user.py  ac8986dff4d9_add_game_events.py  b7f8a9c0d1e2_add_user_id_to_game_event.py  c3d4e5f6a7b8_add_username_to_user.py  c4d5e6f7a8b9_add_dashboard_stats_indexes.py  d5e6f7a8b9c0_add_permission_grant.py  d93dbbe1bddb_add_delete_cascade_on_game_events.py  e1f2a3b4c5d6_add_app_setting.py  e6f7a8b9c0d1_add_buttons_to_discord_message.py  f2a3b4c5d6e7_add_discord_message.py  f7a8b9c0d1e2_add_app_log.py
questmaster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
search/: search_index.json
tests/: conftest.py  constants.py  factories.py  requirements.txt  test_admin.py  test_auth.py  test_discord.py  test_endpoints.old  test_endpoints.py  test_error_pages.py  test_exceptions.py  test_filters.py  test_form_parsers.py  test_game_embeds.py  test_game_filters.py  test_health.py  test_models.py  test_scheduler.py  test_utils.py  test_views.py
tests/api/: conftest.py  test_auth.py  test_errors.py  test_games.py  test_health.py  test_leaderboards.py  test_pagination.py  test_reference_data.py  test_session_auth.py  test_stats.py  test_users.py
tests/exceptions/: test_base.py  test_business.py  test_database.py  test_discord.py  test_init.py  test_validation.py
tests/logging_config/: test_logging_filters.py  test_logging_handlers.py
tests/models/: test_channel_model.py  test_game_event_model.py  test_game_model.py  test_game_session_model.py  test_special_event_model.py  test_system_model.py  test_trophy_model.py  test_user_model.py  test_vtt_model.py
tests/repositories/: conftest.py  test_base_repository.py  test_channel_repository.py  test_game_event_repository.py  test_game_repository.py  test_game_session_repository.py  test_special_event_repository.py  test_system_repository.py  test_trophy_repository.py  test_user_repository.py  test_vtt_repository.py
tests/services/: conftest.py  test_app_log_service.py  test_channel_service.py  test_discord_service.py  test_game_event_service.py  test_game_service.py  test_game_session_service.py  test_permission_service.py  test_setting_service.py  test_special_event_service.py  test_stats_service.py  test_system_service.py  test_trophy_service.py  test_user_service.py  test_vtt_service.py
tests/utils/: conftest.py  test_app_version.py  test_discord_api.py  test_discord_client.py  test_discord_components.py  test_form_parsers.py  test_game_embeds.py  test_game_filters.py
tests/views/: conftest.py  test_admin.py  test_auth.py  test_dashboard_views.py  test_e2e.py  test_error_pages.py  test_filters.py  test_game_views.py  test_health.py  test_misc_views.py
website/: __init__.py  bot.py  extensions.py  permissions.py  scheduler.py
website/api/: __init__.py  auth.py  errors.py  games.py  health.py  leaderboards.py  pagination.py  reference_data.py  schemas.py  stats.py  users.py
website/client/: __init__.py  discord.py
(+210 files in other folders)
