[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "questmaster"
version = "1.5.1"
description = "Club JDR booking app"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "Flask==3.1.3",
    "Authlib>=1.3.0",
    "requests>=2.32.0",
    "Flask-Migrate==4.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.3.0",
    "Flask-Caching==2.4.0",
    "redis==8.0.0",
    "gunicorn==26.0.0",
    "psutil==7.2.2",
    "psycopg2-binary==2.9.12",
    "Werkzeug==3.1.8",
    "pyyaml==6.0.3",
    "schema==0.7.8",
    "tenacity==9.1.4",
    "wtforms==3.2.2",
    "python-dateutil==2.9.0.post0",
    "unidecode==1.4.0",
    "python-slugify==8.0.4",
    "apscheduler==3.11.2",
    "PyJWT==2.13.0",
    "marshmallow==4.1.0",
]

[project.optional-dependencies]
test = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "python-dotenv==1.2.2",
    "beautifulsoup4==4.15.0",
    "blinker==1.9.0",
]
lint = [
    "black==26.5.1",
    "isort==8.0.1",
    "flake8==7.3.0",
    "pydoclint==0.8.4",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-include-markdown-plugin",
    "mkdocs-swagger-ui-tag",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring live external services (Discord API)",
]

[tool.black]
line-length = 99
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 99
known_first_party = ["website", "config", "tests"]

[tool.pydoclint]
style = "google"
exclude = [
    "tests",
    "migrations",
    "__init__.py",
]
require-return-section = true
require-raises-section = true

[tool.setuptools.packages.find]
include = ["website*"]
